gitops-management/01-infrastructure/storage.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linstor
  namespace: piraeus-datastore
spec:
  hostnames:
  - linstor.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: linstor-controller
      port: 3370
    matches:
    - path:
        type: PathPrefix
        value: /
